gpt-voice commit

--- a/html/react-todo.html
+++ b/html/react-todo.html
@@ -15,12 +15,14 @@
       class TodoList extends React.Component {
         constructor(props) {
           super(props);
-          this.state = { todos: [], newTodo: "", editingTodo: false, editIndex: null };
+          this.state = { todos: [], newTodo: "", editTodo: "", editingTodo: false, editIndex: null };
           this.handleAddTodo = this.handleAddTodo.bind(this);
           this.handleDeleteTodo = this.handleDeleteTodo.bind(this);
           this.handleEditTodo = this.handleEditTodo.bind(this);
           this.handleSaveTodo = this.handleSaveTodo.bind(this);
           this.handleCancelEdit = this.handleCancelEdit.bind(this);
+          this.handleNewTodoChange = this.handleNewTodoChange.bind(this);
+          this.handleEditTodoChange = this.handleEditTodoChange.bind(this);
         }
 
         handleAddTodo() {
@@ -43,74 +45,56 @@
           const editingTodo = true;
           const editIndex = index;
           const editTodo = todos[index];
-          this.setState({ newTodo: editTodo, editingTodo, editIndex });
+          this.setState({ editTodo, editingTodo, editIndex });
         }
 
         handleSaveTodo() {
-          const { newTodo, todos, editIndex } = this.state;
+          const { editTodo, todos, editIndex } = this.state;
 
-          if (newTodo.trim() !== "") {
+          if (editTodo.trim() !== "") {
             const newTodos = [...todos];
-            newTodos[editIndex] = newTodo.trim();
-            this.setState({ todos: newTodos, newTodo: "", editingTodo: false, editIndex: null });
+            newTodos[editIndex] = editTodo.trim();
+            this.setState({ todos: newTodos, editTodo: "", editingTodo: false, editIndex: null });
           }
         }
 
         handleCancelEdit() {
-          this.setState({ newTodo: "", editingTodo: false, editIndex: null });
+          this.setState({ editTodo: "", editingTodo: false, editIndex: null });
+        }
+
+        handleNewTodoChange(event) {
+          if (!this.state.editingTodo) {
+            this.setState({ newTodo: event.target.value });
+          }
+        }
+
+        handleEditTodoChange(event) {
+          const editTodo = event.target.value;
+          this.setState({ editTodo });
         }
 
         render() {
-          const { todos, newTodo, editingTodo, editIndex } = this.state;
+          const { todos, newTodo, editTodo, editingTodo, editIndex } = this.state;
 
           return (
             <div>
               <h1>Todo List</h1>
-              {editingTodo ? (
-                <div>
-                  <input
-                    type="text"
-                    value={newTodo}
-                    onChange={(event) =>
-                      this.setState({ newTodo: event.target.value })
-                    }
-                  />
-                  <button onClick={this.handleSaveTodo}>Save</button>
-                  <button onClick={this.handleCancelEdit}>Cancel</button>
-                </div>
-              ) : (
-                <div>
-                  <input
-                    type="text"
-                    value={newTodo}
-                    onChange={(event) =>
-                      this.setState({ newTodo: event.target.value })
-                    }
-                  />
-                  <button onClick={this.handleAddTodo}>Add</button>
-                </div>
-              )}
+              <div>
+                <input type="text" value={newTodo} onChange={this.handleNewTodoChange} />
+                <button onClick={this.handleAddTodo}>Add</button>
+              </div>
               <ul>
                 {todos.map((todo, index) => (
                   <li key={index}>
                     {editingTodo && index === editIndex ? (
-                      <input
-                        type="text"
-                        value={newTodo}
-                        onChange={(event) =>
-                          this.setState({ newTodo: event.target.value })
-                        }
-                      />
-                    ) : (
-                      <span>{todo}</span>
-                    )}
-                    {editingTodo && index === editIndex ? (
                       <div>
+                        <input type="text" value={editTodo} onChange={this.handleEditTodoChange} />
                         <button onClick={this.handleSaveTodo}>Save</button>
                         <button onClick={this.handleCancelEdit}>Cancel</button>
                       </div>
                     ) : (
                       <div>
+                        <span>{todo}</span>
                         <button onClick={() => this.handleEditTodo(index)}>Edit</button>
                         <button onClick={() => this.handleDeleteTodo(index)}>Delete</button>
                       </div>
