--- a/html/sanity.htm
+++ b/html/sanity.htm
@@ -25,6 +25,7 @@
         const client = createClient({
             projectId: 'b3rj1ubh',
             dataset: 'production',
+            token: 'skOzyD4VViJ88amMAqteATe2ebZRfoPsHN4U9u1bvC6a1swtKvSKqe25j2D96wKrB3TVnz7cLHR3Mkld5dyeDKw3HE9s0kcTDTcwsO1qKv6hMHUSoS9yOMkfevPS7vMxW1gqA2kXLzBAPoO4NiNqQ1OofngwJIVfkdN9UgE2TaYBltmLUVJw',
             useCdn: true, // set to `false` to bypass the edge cache
             apiVersion: '2023-05-03', // use current date (YYYY-MM-DD) to target the latest API version
         })
